--- a/node-unit-mvc/package.json
+++ b/node-unit-mvc/package.json
@@ -13,10 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "mongodb": "^6.3.0",
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
-    "jest": "^27.3.1",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.15",
     "sinon": "^12.0.1",
     "supertest": "^6.1.6"
